--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,8 @@ jobs:
         with:
           luaVersion: "luajit-2.0.5"
       - uses: leafo/gh-actions-luarocks@v4
-      - run: sudo apt-get install jq
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y libjq-dev
       - run: luarocks install luacheck
       - run: luarocks install luacov
       - run: luarocks install busted
