--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,15 +6,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: leafo/gh-actions-lua@v8
+      - uses: actions/checkout@v4
+      - uses: hishamhm/gh-actions-lua@master
         with:
-          luaVersion: "luajit-2.0.5"
-      - uses: leafo/gh-actions-luarocks@v4
+          luaVersion: "luajit-2.1"
+      - uses: luarocks/gh-actions-luarocks@master
+        with:
+          luaRocksVersion: "@418d2ab34891b130cc317df32f65f978640febcf"
       - run: sudo apt-get update
       - run: sudo apt-get install -y libjq-dev
       - run: luarocks install luacheck
       - run: luarocks install luacov
       - run: luarocks install busted
+      - run: luarocks make
       - run: make lint
       - run: make coverage
